# orbitfit

./: Dockerfile  README.md  requirements.txt  run_Orekit_fit.py  run_TLE_fit.py  setup.cfg  shortcuts.sh  test_script_GEOServicer.py  test_script_GEOServicerLongRun.py  test_script_LEOServicer.py
BATCH_MIO/: AngularBatchEst.py  run_Orekit_versors.py
TLE_example_1/: example_tle.txt
TLE_example_2/: real_TLE.txt
development/: Debugging_NSL1_drag.ipynb  NSL1_GPS_analysis_20210716.ipynb  debugging_TLEFit.ipynb  stk_result_newsat5_20181112.txt  stk_result_newsat5_20181112_2.txt  test_against_stk.ipynb
jupiter/: horizonconverter.ipynb
orbitfit/: I2E.py  astronomical_constants.py  io.py  orbital_elements.py  orbitfit.py  rotate.py  teme2ecef.py  tle_utils.py  utils.py
orbitfit/I2E_data/: aeroCIP2006_S.csv  aeroCIP2006_X.csv  aeroCIP2006_Y.csv  eopc04_IAU2000.txt
pkl_example_1/: CH01_20210310_MTQ_Test4_rev6_rows0to1415_gps.pkl
pkl_example_2/: CH01_20210716_GPS_Test4_Rev6-3_rows_0to686_fixed_gps.pkl  initial_config_dict.json
