[metadata]
name = orbitfit
version = 1.0.0
author = Enrique Carlos Toomey
author_email = enritoomey@gmail.com
description = Script to fit orbit to gps points using orbdetpy solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enritoomey/orbitfit
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = orbitfit
install_requires = 
    numpy
    matplotlib
    scipy
    pandas<1.5.0
    orbdetpy==2.1.0
    sgp4 @ git+http://github.com/enritoomey/python-sgp4.git@master
    satellogic_quaternions
    aocs-utils
python_requires = >=3.6
